# api-in-a-nutshell

./: manage.py  pyproject.toml
APIs_in_a_nutshell/: asgi.py  settings.py  urls.py  wsgi.py
APIs_in_a_nutshell/migrations/: 0001_initial.py  0002_auto_20200330_2040.py  0003_auto_20200331_1734.py
quickstart/: admin.py  models.py  serializers.py  views.py
quickstart/management/commands/: bootstrap_data.py
quickstart/migrations/: 0001_initial.py
